# YourCovidRisk

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  README.md  SECURITY.md  app.py  config.py  jest.config.cjs  mypy.ini  package-lock.json  package.json  pyproject.toml  requirements.txt  run_dev.py  run_prod.py
PMC/: generate_distributions_manual.py  pull_prevalence.py  pull_prevalence_monitored.py
Walgreens/: pipeline_walgreens.py  transform_walgreens_data.py  update_walgreens.py  update_walgreens_monitored.py
calculators/: __init__.py  bayesian_test_integration.py  calculation_steps.py  detection_curves.py  environment_data.py  error_state_bayesian_model.py  exposure_calculator.py  formatting.py  immunity_decay.py  monte_carlo_ci.py  risk_distribution.py  test_calculator.py  test_performance_data.py  time_varying_prevalence.py  validators.py  viral_load_distributions.py  viral_load_unit_conversion.py
covid_app/: __init__.py
covid_app/blueprints/: main.py  (+2 more)
scripts/: __init__.py  daily_repeated_exposure.py
shared/: job_utils.py
static/: data.js  exposure-calculator.css  exposure-calculator.js  styles.css  test-calculator.js
templates/: base_analytics.html  exposure_about_you.html  exposure_activity_levels.html  exposure_calculator.html  exposure_environment.html  exposure_hero.html  exposure_other_people.html  faq.html  faq_exposure_calculator.html  faq_general.html  faq_test_calculator.html  index.html  rate_limit.html  test_calculator.html
tests/: test_calculators.py  test_endpoints.py  test_monte_carlo.py  test_validators.py
(+53 files in other folders)
